# open_gororoba

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COSMIC_ENGINE_PROGRESS.md  Cargo.toml  GEMINI.md  Makefile  PANTHEON_PHYSICSFORGE_90_POINT_MIGRATION_PLAN.md  PHASE10_11_ULTIMATE_ROADMAP.md  PYTHON_REFACTORING_ROADMAP.md  README.md  REQUIREMENTS.md  RUST_MIGRATION_PLAN.md  RUST_REFACTOR_PLAN.md  SYNTHESIS_PIPELINE_PROGRESS.md  check_gemini.sh  config_check.txt  deny.toml  gemini_debug.txt  modify_settings.py  pkg_check.txt  pyproject.toml  pytest.ini  refs.bib  run_quantum_container.sh
crates/algebra_core/: Cargo.toml
crates/algebra_core/benches/: algebra_bench.rs  dimensional_bench.rs
crates/algebra_core/examples/: e10_billiard.rs  et_survey.rs  m3_e8_bridge.rs
crates/algebra_core/src/: annihilator.rs  billiard_sim.rs  billiard_stats.rs  boxkites.rs  cayley_dickson.rs  cd_external.rs  e10_octonion.rs  e8_lattice.rs  emanation.rs  error.rs  fractal_analysis.rs  grassmannian.rs  group_theory.rs  homotopy_algebra.rs  hypercomplex.rs  kac_moody.rs  lib.rs  m3.rs  moonshine.rs  mult_table.rs  nilpotent_orbits.rs  octonion_field.rs  padic.rs  projective_geometry.rs  reggiani.rs  so7_drift.rs  stochastic.rs  universal_algebra.rs  wheels.rs  zd_graphs.rs
crates/algebra_core/tests/: test_albert_algebra.rs  test_composition_algebra_taxonomy.rs  test_exotic_octonions.rs  test_low_dimensional_survey.rs  test_split_octonion_attractor.rs  test_split_octonion_geometry.rs  test_tessarines_census.rs
crates/control_core/: Cargo.toml
crates/control_core/src/: feedback.rs  filtering.rs  lib.rs  orbital_algebra_mechanics.rs  pid.rs  plant.rs  state_space.rs
crates/cosmic_scheduler/: Cargo.toml
crates/cosmic_scheduler/src/: lib.rs  phase_scheduler.rs  timing_constants.rs
crates/cosmic_scheduler/tests/: test_deterministic_evolution.rs  test_lbm_integration.rs  test_phase_scheduler.rs
crates/cosmology_core/: Cargo.toml
crates/cosmology_core/src/: axiodilaton.rs  bounce.rs  dimensional_geometry.rs  distances.rs  eos.rs  flrw.rs  gravastar.rs  homotopy_bridge.rs  lib.rs  observational.rs  spectral.rs  tov.rs
crates/data_core/: Cargo.toml
crates/data_core/src/: benchmarks.rs  doc_links.rs  fetcher.rs  hdf5_export.rs  lib.rs  provenance.rs  registry.rs
crates/docpipe/: Cargo.toml
crates/docpipe/src/: equation_catalog.rs  fallback_backend.rs  image.rs  lib.rs  pdf.rs  pdfium_backend.rs  table.rs  text.rs  toml_out.rs
crates/docpipe/tests/: equation_catalog_pipeline.rs
crates/gororoba_cli/: Cargo.toml
crates/gororoba_cli/src/: lib.rs  main.rs  viz.rs
crates/gororoba_cli/tests/: integration_cd_algebra.rs  integration_gravastar.rs  integration_snia_ddt.rs  integration_spectral.rs  integration_thesis_program_sweep.rs  test_consolidate.rs
crates/gororoba_engine/: Cargo.toml
crates/gororoba_engine/src/: adaptive_gpu.rs  bit_source.rs  correction_layer.rs  dynamics_field.rs  lib.rs  parity_filter.rs  pipeline.rs  thesis_pipelines.rs  topology_geometry.rs  traits.rs  verification_layer.rs
crates/gororoba_engine/tests/: integration_test.rs
crates/gororoba_kernels/: Cargo.toml  pyproject.toml
crates/gororoba_kernels/benches/: algebra_bench.rs
crates/gororoba_kernels/src/: algebra.rs  holographic.rs  lib.rs  mera.rs  spectral.rs  stats.rs  tang_mass.rs  zd_graphs.rs
crates/gororoba_py/: Cargo.toml
crates/gororoba_py/src/: lib.rs
crates/gr_core/: Cargo.toml
crates/gr_core/src/: absorption.rs  constants.rs  coordinates.rs  cosmology_algebra_bridge.rs  doppler.rs  energy_conserving.rs  gravitational_waves.rs  hawking.rs  kerr.rs  kerr_de_sitter.rs  kerr_newman.rs  lib.rs  metric.rs  novikov_thorne.rs  null_constraint.rs  penrose.rs  photon_graviton.rs  scattering.rs  schwarzschild.rs  spacetime_algebra.rs  spectral_bands.rs  synchrotron.rs
crates/lattice_filtration/: Cargo.toml
crates/lattice_filtration/src/: basis_index.rs  filtration.rs  lbm_coupling.rs  lepton_ratio.rs  lib.rs  mass_spectrum.rs  patricia_trie.rs  survival_spectrum.rs
crates/lattice_filtration/tests/: integration_test.rs  test_lepton_ratio.rs  test_mass_spectrum.rs
crates/lbm_3d/: Cargo.toml
crates/lbm_3d/src/: boundary.rs  lattice.rs  lib.rs  solver.rs
crates/lbm_3d/tests/: integration_tests.rs  test_guo_forcing.rs  test_phase_coordination.rs  test_spatial_viscosity.rs  validation_taylor_green.rs
crates/lbm_3d_cuda/: Cargo.toml  README.md
crates/lbm_3d_cuda/benches/: gpu_exhaustive.rs  gpu_performance.rs
crates/lbm_3d_cuda/src/: kernels.cu  lib.rs
crates/lbm_3d_cuda/tests/: test_debug_init.rs  test_gpu_cpu_equivalence.rs
crates/materials_core/: Cargo.toml
crates/materials_core/src/: baselines.rs  crystal_symmetry.rs  effective_medium.rs  featurizer.rs  lib.rs  metamaterial.rs  optical_database.rs  periodic_table.rs  tang_mass.rs  viscosity_database.rs
crates/neural_homotopy/: Cargo.toml
crates/neural_homotopy/src/: burn_backend.rs  burn_model.rs  lib.rs  m4_tensor.rs  model.rs  optimizer.rs  perturbation.rs  stasheff.rs  tensor_ops.rs  training_data.rs
crates/neural_homotopy/tests/: integration_test.rs  test_burn_model.rs  test_m4_tensor.rs  test_optimizer.rs
crates/optics_core/: Cargo.toml
crates/optics_core/src/: entropy_trap.rs  grin.rs  lib.rs  multi_resonator.rs  optics_algebra_bridge.rs  phase_retrieval.rs  sfwm.rs  tcmt.rs
crates/quantum_core/: Cargo.toml
crates/quantum_core/benches/: gpu_peps_bench.rs  quantum_bench.rs
crates/quantum_core/src/: casimir.rs  fractional_schrodinger.rs  gross_pitaevskii.rs  grover.rs  hamiltonian_evolution.rs  hardware.rs  harper_chern.rs  he3_superfluid.rs  holographic.rs  hypothesis_search.rs  lib.rs  mera.rs  mps.rs  peps.rs  qua_ten_net_bridge.rs  spinor_mechanics.rs  superfluid.rs  tensor_network_classical.rs  tensor_networks.rs  two_fluid.rs
crates/scrolls_core/: Cargo.toml
crates/scrolls_core/src/: lib.rs
crates/snia_core/: Cargo.toml
crates/spectral_core/: Cargo.toml
crates/stats_core/: Cargo.toml
crates/vacuum_frustration/: Cargo.toml  IMPLEMENTATION_NOTES.md
src/gororoba_kernels/: Cargo.toml
(+2758 files in other folders)
