[workspace]
resolver = "2"
members = [
    "crates/algebra_core",
    "crates/control_core",
    "crates/cosmology_core",
    "crates/data_core",
    "crates/materials_core",
    "crates/optics_core",
    "crates/quantum_core",
    "crates/gr_core",
    "crates/stats_core",
    "crates/spectral_core",
    "crates/lbm_core",
    "crates/gororoba_py",
    "crates/gororoba_cli",
]

# Shared dependencies across workspace
[workspace.dependencies]
# Core numerics
nalgebra = "0.33"
ndarray = "0.16"
num-complex = "0.4"
num-traits = "0.2"
num-quaternion = "1.0"

# Graph algorithms
petgraph = "0.7"
ordered-float = "4.6"

# Statistics
statrs = "0.18"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

# Algebra extensions
wheel = "0.1.0"              # Wheel algebra (division-by-zero semantics)
padic = "0.1.6"              # P-adic numbers
adic = "0.5.0"               # P-adic arithmetic and rootfinding
atlas-embeddings = "0.1.1"   # Exceptional Lie groups (E6/E7/E8) from resonance classes
num-bigint = "0.4"           # Arbitrary precision integers (Monster group order)

# Stochastic processes and fractal analysis
mimalloc = "0.1"             # Required by diffusionx
diffusionx = "0.11.2"        # fBm, Levy, OU processes (requires mimalloc)
hurst = "0.1.0"              # Hurst exponent estimation (R/S methods)

# Hierarchical clustering and spatial indexing
kodama = "0.3.0"             # Agglomerative hierarchical clustering (dendrograms)
kiddo = "5.2.4"              # High-performance k-d trees (AVX2/SIMD)

# FFT and spectral analysis
rustfft = "6.4.1"            # High-performance FFT (pure Rust, AVX/SSE)
realfft = "3.5.0"            # Real-to-complex FFT wrapper for rustfft

# Astronomical data formats and coordinates
fitsrs = "0.4.1"             # Pure Rust FITS file reader (CDS Strasbourg)
votable = "0.7.0"            # VOTable serializer/deserializer (CDS Strasbourg)
satkit = "0.9.3"             # Satellite toolkit: coordinate frames, Earth gravity models

# Physics constants and materials
physical_constants = "0.5.0" # CODATA physical constants (GPL-3.0)
periodic-table-on-an-enum = "0.3.2"  # Element enum with atomic data

# Numerical quadrature
gauss-quad = "0.2.4"         # Gauss-Legendre quadrature (replaces hand-rolled Simpson)

# ODE solvers
ode_solvers = "0.6.1"        # Dormand-Prince 5(4), Dop853, RK4 (nalgebra-based)

# Quantum computing
quantum = "0.1.2"            # Quantum computer simulator
qua_ten_net = "0.2.0"        # Tensor networks for quantum computing

# Parallelism
rayon = "1.10"

# SIMD
wide = "0.7"                 # Portable SIMD (f64x4, f64x2, etc.)

# Error handling
thiserror = "2.0"

# CLI and serialization
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
sha2 = "0.10"                 # SHA-256 checksums for data provenance
ureq = "3"                    # Minimal sync HTTP client for data fetching
flate2 = "1.1"                # Gzip compression/decompression
zip = "2.2"                   # ZIP archive extraction
tar = "0.4"                   # Tar archive reading (WMAP/Planck chain extraction)

# Visualization
plotters = "0.3"
plotters-svg = "0.3"

# Python bindings
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"

# Testing
approx = "0.5"
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
