[workspace.package]
license = "GPL-2.0-only"
repository = "https://github.com/Oichkatzelesfrettschen/open_gororoba"

[workspace]
resolver = "2"
members = [
    "crates/algebra_core",
    "crates/control_core",
    "crates/cosmology_core",
    "crates/data_core",
    "crates/docpipe",
    "crates/scrolls_core",
    "crates/materials_core",
    "crates/optics_core",
    "crates/quantum_core",
    "crates/gr_core",
    "crates/stats_core",
    "crates/spectral_core",
    "crates/lbm_core",
    "crates/gororoba_py",
    "crates/gororoba_cli",
    "crates/snia_core",
    "crates/cosmic_scheduler",
    "crates/vacuum_frustration",
    "crates/lbm_3d",
    "crates/lbm_3d_cuda",
    "crates/lattice_filtration",
    "crates/neural_homotopy",
    "crates/gororoba_engine",
]

# Shared dependencies across workspace
[workspace.dependencies]
# Core numerics
nalgebra = "0.33"
ndarray = "0.16"
num-complex = "0.4"
num-traits = "0.2"
num-quaternion = "1.0"

# Graph algorithms
petgraph = "0.7"
ordered-float = "4.6"

# Statistics
statrs = "0.18"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

# Algebra extensions
wheel = "0.1.0"              # Wheel algebra (division-by-zero semantics)
padic = "0.1.6"              # P-adic numbers
adic = "0.5.0"               # P-adic arithmetic and rootfinding
atlas-embeddings = "0.1.1"   # Exceptional Lie groups (E6/E7/E8) from resonance classes
num-bigint = "0.4"           # Arbitrary precision integers (Monster group order)
wedged = "0.1"               # Dimension-agnostic geometric algebra (Phase 3a validation)

# Stochastic processes and fractal analysis
mimalloc = "0.1"             # Required by diffusionx
diffusionx = "0.11.2"        # fBm, Levy, OU processes (requires mimalloc)
hurst = "0.1.0"              # Hurst exponent estimation (R/S methods)

# Hierarchical clustering and spatial indexing
kodama = "0.3.0"             # Agglomerative hierarchical clustering (dendrograms)
kiddo = "5.2.4"              # High-performance k-d trees (AVX2/SIMD)

# FFT and spectral analysis
rustfft = "6.4.1"            # High-performance FFT (pure Rust, AVX/SSE)
realfft = "3.5.0"            # Real-to-complex FFT wrapper for rustfft
ndrustfft = "0.5.0"          # N-dimensional FFT on ndarray (C2C, R2C, DCT)
rustdct = "0.7"              # Discrete Cosine Transforms (required by ndrustfft)

# Astronomical data formats and coordinates
fitsrs = "0.4.1"             # Pure Rust FITS file reader (CDS Strasbourg)
votable = "0.7.0"            # VOTable serializer/deserializer (CDS Strasbourg)
satkit = "0.9.3"             # Satellite toolkit: coordinate frames, Earth gravity models

# Physics constants and materials
physical_constants = "0.5.0" # CODATA physical constants (GPL-3.0)
periodic-table-on-an-enum = "0.3.2"  # Element enum with atomic data

# Numerical quadrature
gauss-quad = "0.2.4"         # Gauss-Legendre quadrature (replaces hand-rolled Simpson)

# Special functions
ellip = "1.0.4"              # Carlson symmetric (RF,RD,RJ,RC,RG) + Legendre elliptic integrals

# ODE solvers
ode_solvers = "0.6.1"        # Dormand-Prince 5(4), Dop853, RK4 (nalgebra-based)

# Quantum computing
quantum = "0.1.2"            # Quantum computer simulator
qua_ten_net = "0.2.0"        # Tensor networks for quantum computing

# Parallelism
rayon = "1.10"

# SIMD
wide = "0.7"                 # Portable SIMD (f64x4, f64x2, etc.)

# GPU compute (CUDA via dynamic loading -- binary works without GPU at runtime)
cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "nvrtc", "dynamic-loading", "cuda-version-from-build-system"] }

# Machine learning / Neural synthesis (burn 0.16: pure Rust, backend-agnostic)
# Note: burn backends are optional at crate level, not workspace level
burn = { version = "0.16", features = ["train", "autodiff"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI and serialization
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
regex = "1.12"                # Claims matrix parsing, pattern matching
walkdir = "2.5"               # Recursive directory traversal for evidence link checks
glob = "0.3"                  # Unix shell pattern matching for artifact paths
sha2 = "0.10"                 # SHA-256 checksums for data provenance
ureq = "3"                    # Minimal sync HTTP client for data fetching
flate2 = "1.1"                # Gzip compression/decompression
zip = "2.2"                   # ZIP archive extraction
tar = "0.4"                   # Tar archive reading (WMAP/Planck chain extraction)

# PDF extraction (pdfium-render is primary; lopdf/pdf-extract are pure-Rust fallback)
pdfium-render = "0.8"            # High-level PDFium wrapper (text, images, rendering)
image = "0.25"                   # Image encoding/decoding (used by pdfium-render for PNG output)
lopdf = "0.39"                   # Pure Rust PDF parser (fallback, object-level access)
pdf-extract = "0.10"             # Pure Rust PDF text extraction (fallback, wraps lopdf)
toml = "0.8"                     # TOML serialization/deserialization

# HDF5 data export (requires system libhdf5)
# Using hdf5-metno fork which supports HDF5 2.0 (Arch/CachyOS ships 2.0.0-3.1)
# The upstream hdf5 0.8.1 panics on HDF5 2.0 with "Invalid H5_VERSION"
hdf5 = { package = "hdf5-metno", version = "0.12" }

# Documentation generation
clap_mangen = "0.2"              # Manpage generation from clap App structs

# Visualization
plotters = "0.3"
plotters-svg = "0.3"

# Logging and Config
log = "0.4"
env_logger = "0.11"
config = "0.14"

# Python bindings
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"

# Testing
approx = "0.5"
tempfile = "3.24"
proptest = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }

# Development: release-class optimization with full debug info.
# Goal: keep dev/test/prod semantics as aligned as possible while retaining
# debug visibility and early failure signals during local iteration.
[profile.dev]
opt-level = 3
debug = "full"              # maximal DWARF info for gdb/lldb/flamegraph/perf
strip = "none"              # keep all symbols for profiling
lto = "fat"                 # align with production optimization baseline
codegen-units = 1           # maximize optimization parity with release lane
incremental = true          # fast rebuilds during iteration
overflow-checks = true      # catch integer overflow bugs at runtime
debug-assertions = true     # catch debug_assert! failures
panic = "unwind"            # keep unwind semantics for catch_unwind call-sites

# Test: keep parity with dev/release compute behavior, with test harness enabled.
[profile.test]
opt-level = 3

# Release: maximum optimization, no debug data, stripped for distribution.
# Use for final binaries, benchmarks against baselines, and published artifacts.
[profile.release]
opt-level = 3
debug = false               # no debug info in production binaries
strip = "symbols"           # remove symbol table for smaller binary
lto = "fat"                 # full cross-crate LTO (slowest compile, best runtime)
codegen-units = 1           # single codegen unit = maximum LLVM optimization
overflow-checks = true      # keep arithmetic behavior aligned with dev/test lanes
panic = "unwind"            # required while catch_unwind-based safety wrappers exist
# NOTE: panic = "abort" is omitted because stats_core uses catch_unwind for the
# hurst crate safety wrapper. If that dependency is removed, add panic = "abort"
# for ~5% binary size reduction and slight speed gain from no unwinding tables.

# Bench: release-level optimization with fat LTO for baseline parity.
[profile.bench]
opt-level = 3
debug = "line-tables-only"  # minimal debug info for flamegraph profiling
lto = "fat"                 # benchmark against production-optimized code paths
codegen-units = 1           # single codegen for consistent benchmark results
