[package]
name = "algebra_core"
version = "0.1.0"
edition = "2021"
description = "Cayley-Dickson algebras, Clifford algebras, and algebraic structures for physics"
license = "MIT"

[dependencies]
nalgebra = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
petgraph = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
rustfft = "6.2"
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "algebra_bench"
harness = false
