[package]
name = "algebra_core"
version = "0.1.0"
edition = "2021"
description = "Cayley-Dickson algebras, Clifford algebras, and algebraic structures for physics"
license = "MIT"

[dependencies]
nalgebra = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
petgraph = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
rustfft = "6.2"
thiserror = { workspace = true }

# External algebra crates (workspace)
wheel = { workspace = true }
padic = { workspace = true }
adic = { workspace = true }
atlas-embeddings = { workspace = true }
num-bigint = { workspace = true }

# Stochastic processes and fractal analysis (workspace)
diffusionx = { workspace = true }
hurst = { workspace = true }

# Lie algebras
liealg = { workspace = true }
commutator-rs = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "algebra_bench"
harness = false
