[package]
name = "algebra_core"
version = "0.1.0"
edition = "2021"
description = "Cayley-Dickson algebras, Clifford algebras, and algebraic structures for physics"
license = "MIT"

[dependencies]
nalgebra = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
petgraph = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
sha2 = { workspace = true }
wide = { workspace = true }
rustfft = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
csv = { workspace = true }

# External algebra crates (workspace)
wheel = { workspace = true }
padic = { workspace = true }
adic = { workspace = true }
atlas-embeddings = { workspace = true }
num-bigint = { workspace = true }
wedged = { workspace = true, optional = true }  # Phase 3a validation (dimension-agnostic geometric algebra)

# Stochastic processes and fractal analysis (workspace)
diffusionx = { workspace = true }
hurst = { workspace = true }

# GPU acceleration (optional, feature-gated)
cudarc = { workspace = true, optional = true }

[features]
default = []
gpu = ["cudarc"]

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "algebra_bench"
harness = false

[[bench]]
name = "dimensional_bench"
harness = false
