[package]
name = "control_core"
version = "0.1.0"
edition = "2021"
description = "Control systems: Plant traits, feedback controllers, state estimation"
license = "MIT"

[dependencies]
nalgebra = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

# Physics crate bridges (optional features for domain-specific Plant implementations)
optics_core = { path = "../optics_core", optional = true }
quantum_core = { path = "../quantum_core", optional = true }

[features]
default = []
optics = ["optics_core"]
casimir = ["quantum_core"]
all-bridges = ["optics", "casimir"]

[dev-dependencies]
approx = { workspace = true }
