[package]
name = "cosmology_core"
version = "0.1.0"
edition = "2021"
description = "Cosmology simulations: gravastar TOV, spectral dimensions, fractal cosmology"
license = "MIT"

[dependencies]
nalgebra = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

# Sparse matrices and ODE solvers (workspace)
sprs = { workspace = true }
russell_ode = { workspace = true }
ode_solvers = { workspace = true }
diffsol = { workspace = true }

# Physics constants
physical_constants = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
