[package]
name = "cosmology_core"
version = "0.1.0"
edition = "2021"
description = "Cosmology simulations: gravastar TOV, spectral dimensions, fractal cosmology"
license = "MIT"

[dependencies]
nalgebra = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

# Numerical quadrature
gauss-quad = { workspace = true }

# Physics constants
physical_constants = { workspace = true }

# Statistical distributions (Gamma function for dimensional geometry)
statrs = { workspace = true }

# RNG for synthetic data generation
rand = { workspace = true }
rand_distr = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
