[package]
name = "data_core"
version = "0.1.0"
edition = "2021"
description = "Dataset acquisition, validation, and caching for cosmological catalogs"
license = "MIT"

[dependencies]
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ureq = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
rand = { workspace = true }
hdf5 = { workspace = true, optional = true }

[features]
default = []
hdf5-export = ["dep:hdf5"]

[dev-dependencies]
approx = { workspace = true }
tempfile = { workspace = true }
