[package]
name = "gororoba_cli"
version = "0.1.0"
edition = "2021"
description = "CLI tools for gororoba physics simulation library"
license = "MIT"

[[bin]]
name = "gororoba"
path = "src/main.rs"

[[bin]]
name = "kerr-shadow"
path = "src/bin/kerr_shadow.rs"

[[bin]]
name = "zd-search"
path = "src/bin/zd_search.rs"

[[bin]]
name = "gravastar-sweep"
path = "src/bin/gravastar_sweep.rs"

[[bin]]
name = "grin-trace"
path = "src/bin/grin_trace.rs"

[[bin]]
name = "mera-entropy"
path = "src/bin/mera_entropy.rs"

[[bin]]
name = "frac-laplacian"
path = "src/bin/frac_laplacian.rs"

[[bin]]
name = "lbm-poiseuille"
path = "src/bin/lbm_poiseuille.rs"

[[bin]]
name = "bounce-cosmology"
path = "src/bin/bounce_cosmology.rs"

[[bin]]
name = "neg-dim-eigen"
path = "src/bin/neg_dim_eigen.rs"

[[bin]]
name = "frac-schrodinger"
path = "src/bin/frac_schrodinger.rs"

[[bin]]
name = "ema-calc"
path = "src/bin/ema_calc.rs"

[[bin]]
name = "oct-field"
path = "src/bin/oct_field.rs"

[[bin]]
name = "tensor-network"
path = "src/bin/tensor_network.rs"

[[bin]]
name = "harper-chern"
path = "src/bin/harper_chern.rs"

[[bin]]
name = "tcmt-sweep"
path = "src/bin/tcmt_sweep.rs"

[[bin]]
name = "fetch-chime-frb"
path = "src/bin/fetch_chime_frb.rs"

[[bin]]
name = "frb-ultrametric"
path = "src/bin/frb_ultrametric.rs"

[[bin]]
name = "gw-merger-tree"
path = "src/bin/gw_merger_tree.rs"

[[bin]]
name = "frb-cascades"
path = "src/bin/frb_cascades.rs"

[[bin]]
name = "dm-ultrametric"
path = "src/bin/dm_ultrametric.rs"

[[bin]]
name = "baire-compact"
path = "src/bin/baire_compact.rs"

[[bin]]
name = "cosmic-dendrogram"
path = "src/bin/cosmic_dendrogram.rs"

[[bin]]
name = "fetch-datasets"
path = "src/bin/fetch_datasets.rs"

[[bin]]
name = "real-cosmo-fit"
path = "src/bin/real_cosmo_fit.rs"

[[bin]]
name = "multi-dataset-ultrametric"
path = "src/bin/multi_dataset_ultrametric.rs"

[[bin]]
name = "motif-census"
path = "src/bin/motif_census.rs"

[dependencies]
algebra_core = { path = "../algebra_core" }
cosmology_core = { path = "../cosmology_core" }
gr_core = { path = "../gr_core" }
materials_core = { path = "../materials_core" }
optics_core = { path = "../optics_core" }
quantum_core = { path = "../quantum_core" }
spectral_core = { path = "../spectral_core" }
lbm_core = { path = "../lbm_core" }
stats_core = { path = "../stats_core", features = ["gpu"] }
data_core = { path = "../data_core" }
ndarray = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
num-complex = { workspace = true }
plotters = { workspace = true }
plotters-svg = { workspace = true }
ureq = { workspace = true }
sha2 = { workspace = true }
rayon = { workspace = true }
