[package]
name = "gororoba_cli"
version = "0.1.0"
edition = "2021"
description = "CLI tools for gororoba physics simulation library"
license = "MIT"
autobins = false

[[bin]]
name = "gororoba"
path = "src/main.rs"

[[bin]]
name = "kerr-shadow"
path = "src/bin/kerr_shadow.rs"

[[bin]]
name = "zd-search"
path = "src/bin/zd_search.rs"

[[bin]]
name = "gravastar-sweep"
path = "src/bin/gravastar_sweep.rs"

[[bin]]
name = "grin-trace"
path = "src/bin/grin_trace.rs"

[[bin]]
name = "mera-entropy"
path = "src/bin/mera_entropy.rs"

[[bin]]
name = "frac-laplacian"
path = "src/bin/frac_laplacian.rs"

[[bin]]
name = "lbm-poiseuille"
path = "src/bin/lbm_poiseuille.rs"

[[bin]]
name = "bounce-cosmology"
path = "src/bin/bounce_cosmology.rs"

[[bin]]
name = "neg-dim-eigen"
path = "src/bin/neg_dim_eigen.rs"

[[bin]]
name = "frac-schrodinger"
path = "src/bin/frac_schrodinger.rs"

[[bin]]
name = "ema-calc"
path = "src/bin/ema_calc.rs"

[[bin]]
name = "oct-field"
path = "src/bin/oct_field.rs"

[[bin]]
name = "tensor-network"
path = "src/bin/tensor_network.rs"

[[bin]]
name = "harper-chern"
path = "src/bin/harper_chern.rs"

[[bin]]
name = "tcmt-sweep"
path = "src/bin/tcmt_sweep.rs"

[[bin]]
name = "fetch-chime-frb"
path = "src/bin/fetch_chime_frb.rs"

[[bin]]
name = "frb-ultrametric"
path = "src/bin/frb_ultrametric.rs"

[[bin]]
name = "gw-merger-tree"
path = "src/bin/gw_merger_tree.rs"

[[bin]]
name = "frb-cascades"
path = "src/bin/frb_cascades.rs"

[[bin]]
name = "dm-ultrametric"
path = "src/bin/dm_ultrametric.rs"

[[bin]]
name = "baire-compact"
path = "src/bin/baire_compact.rs"

[[bin]]
name = "cosmic-dendrogram"
path = "src/bin/cosmic_dendrogram.rs"

[[bin]]
name = "fetch-datasets"
path = "src/bin/fetch_datasets.rs"

[[bin]]
name = "real-cosmo-fit"
path = "src/bin/real_cosmo_fit.rs"

[[bin]]
name = "multi-dataset-ultrametric"
path = "src/bin/multi_dataset_ultrametric.rs"

[[bin]]
name = "motif-census"
path = "src/bin/motif_census.rs"

[[bin]]
name = "claims-audit"
path = "src/bin/claims_audit.rs"

[[bin]]
name = "claims-verify"
path = "src/bin/claims_verify.rs"

[[bin]]
name = "materials-baseline"
path = "src/bin/materials_baseline.rs"

[[bin]]
name = "mass-clumping"
path = "src/bin/mass_clumping.rs"

[[bin]]
name = "cross-stack-locality"
path = "src/bin/cross_stack_locality.rs"

[[bin]]
name = "et-billiard"
path = "src/bin/et_billiard.rs"

[[bin]]
name = "sky-limit-set"
path = "src/bin/sky_limit_set.rs"

[[bin]]
name = "extract-papers"
path = "src/bin/extract_papers.rs"

[[bin]]
name = "migrate-claims"
path = "src/bin/migrate_claims.rs"

[[bin]]
name = "registry-check"
path = "src/bin/registry_check.rs"

[[bin]]
name = "migrate-insights"
path = "src/bin/migrate_insights.rs"

[[bin]]
name = "generate-latex"
path = "src/bin/generate_latex.rs"

[[bin]]
name = "export-hdf5"
path = "src/bin/export_hdf5.rs"

[[bin]]
name = "cd-tower-report"
path = "src/bin/cd_tower_report.rs"

[[bin]]
name = "scrollify-csv"
path = "src/bin/scrollify_csv.rs"

[[bin]]
name = "verify-project-csv-split"
path = "src/bin/verify_project_csv_split.rs"

[[bin]]
name = "registry-emit"
path = "src/bin/registry_emit.rs"

[[bin]]
name = "warp-ring-integration"
path = "src/bin/warp_ring_integration.rs"

[[bin]]
name = "dimensional-census"
path = "src/bin/dimensional_census.rs"

[[bin]]
name = "c590_attractor_sweep"
path = "src/bin/c590_attractor_sweep.rs"

[[bin]]
name = "snia-ddt"
path = "src/bin/snia_ddt.rs"

[[bin]]
name = "percolation-experiment"
path = "src/bin/percolation_experiment.rs"

[dependencies]
docpipe = { path = "../docpipe" }
algebra_core = { path = "../algebra_core" }
cosmology_core = { path = "../cosmology_core" }
gr_core = { path = "../gr_core" }
materials_core = { path = "../materials_core" }
optics_core = { path = "../optics_core" }
quantum_core = { path = "../quantum_core" }
spectral_core = { path = "../spectral_core" }
lbm_core = { path = "../lbm_core" }
lbm_3d = { path = "../lbm_3d" }
stats_core = { path = "../stats_core", features = ["gpu"] }
data_core = { path = "../data_core" }
scrolls_core = { path = "../scrolls_core" }
snia_core = { path = "../snia_core" }
vacuum_frustration = { path = "../vacuum_frustration" }
ndarray = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
num-complex = { workspace = true }
plotters = { workspace = true }
plotters-svg = { workspace = true }
ureq = { workspace = true }
sha2 = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[features]
default = []
hdf5-export = ["data_core/hdf5-export"]
